--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,26 @@
 services:
   - type: web
-    name: gestion-guardavidas
-    env: php
+    name: guardavidas
+    env: docker
     plan: free
-    buildCommand: |
-      composer install --no-dev --optimize-autoloader
-      touch database/database.sqlite
-      php artisan key:generate
-      npm install
-      npm run build
-    startCommand: |
-      php artisan migrate --force
-      php artisan serve --host 0.0.0.0 --port $PORT
+    dockerfilePath: ./Dockerfile
+    autoDeploy: true
     envVars:
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
         value: false
       - key: APP_KEY
-        generateValue: true
+        sync: false
+      - key: DB_CONNECTION
+        value: mysql
+      - key: DB_HOST
+        value: your-db-host
+      - key: DB_PORT
+        value: 3306
+      - key: DB_DATABASE
+        value: your-db-name
+      - key: DB_USERNAME
+        value: your-db-user
+      - key: DB_PASSWORD
+        sync: false
