--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,9 @@
 server {
     listen 80;
-    index index.php index.html;
+    server_name _;
+
     root /var/www/html/public;
+    index index.php index.html index.htm;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -9,9 +11,10 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
