--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name _;
 
     root /var/www/html/public;
-    index index.php index.html index.htm;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -14,10 +14,12 @@ server {
         fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
         deny all;
     }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
