cambios en configuracion nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,24 +2,34 @@ server {
     listen 80;
     server_name _;
 
+    # Apunta a la carpeta public de Laravel
     root /var/www/html/public;
     index index.php index.html;
 
+    # Manejo de rutas de Laravel
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Procesar PHP con PHP-FPM
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
+
+        # PHP-FPM corre en el mismo contenedor en el puerto 9000
+        fastcgi_pass 127.0.0.1:9000;
+
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location ~ /\.ht {
+    # Denegar acceso a archivos ocultos
+    location ~ /\. {
         deny all;
     }
 
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    # Opcional: comprimir respuestas
+    gzip on;
+    gzip_types text/css application/javascript text/javascript application/json image/svg+xml;
+    gzip_min_length 256;
 }
